# pmpktn

./: .gitignore  README.md  backup_delete_db.bat  config.json  create_db.bat  create_macos_final_steps.py  database  database.db  db_setting.json  drugwarehouse.xlsx  drugwarehousefilter.sql  hidecmd.vbs  initialize.py  macos_env.yml  main.py  main.spec  new_database.bat  new_database_with_samples.bat  other_func.py  pip_requirements.txt  pmpktn.bat  populate_db.bat  pyproject.toml  setting - Copy.json  setting.json  setup.py  start_app.bat  user_setting.json  wins_env.yml
core/: main_view.py  menubar.py  patient_dialog.py
core/db/: db_func.py  make_db.py
core/my_widgets/: calc_quantity_widgets.py  drug_list.py  drug_picker.py  get_weight_btn.py  order_book.py  patient_book.py  prescription_page.py  search_bar.py  total_cost.py  visit_list.py
database/: db_func.py  make_db.py  placeholder.txt  sampling.py
drugwarehouse/: warehouse copy.xlsx  warehouse origin 2020-06-21.xlsx  warehouse.xlsx
scripts/: initialize.py  log_in_dialog.py  main.py  nurse_view.py  other_func.py  patient_dialog.py  requirements(macos).txt  sample_prescription.py  sample_prescription_dialog.py  setting.json
scripts/add_edit_patient_dialog/: add_patient_dialog.py  edit_patient_dialog.py
scripts/core/: __init__.py  accel.py  add_a_new_patient_dialog.py  basic_info.py  binding.py  core_func.py  custom_ctrl.py  custom_popup.py  drug_list.py  drug_picker.py  gui.py  left_panel.py  log_in_dialog.py  (+12 more)
settings/: db_setting.json  setting.json  user_setting.json
sqlite/: thankinhnhi.db
(+43 files in other folders)
