[tool.poetry]
name = "pmpktn"
version = "0.1.0"
description = ""
authors = ["vuongkienthanh <thanhstardust@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
